fix spacing

--- a/style.css
+++ b/style.css
@@ -1,3 +1,3 @@
-h1{
-    color: rgb(177, 0, 177)
+h1 {
+  color: rgb(177, 0, 177);
 }
